CSS修正 ranking code修正

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /* 全体 */
 body {
   /* 背景画像　*/
-  background-image: url(../images/forQuizCSS.jpeg);
+  background-image: url(../images/forQuizCSS.jpg);
 
   /* 背景画像のサイズ */
   background-size: cover;
